--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,10 @@ transformers==4.36.2
 safetensors==0.4.1
 huggingface_hub==0.19.4
 regex
-accelerateprotobuf
+
+# Required for transformers
+accelerate
+protobuf
 
 # CPU-compatible torch for Streamlit Cloud
 torch==2.1.0
