--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,5 @@ accelerate
 protobuf
 
 # Install torch from official CPU wheel index
-torch==2.1.0+cpu
---extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.0.1
 
