CPU-compatible torch for Streamlit Cloud

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,5 +13,7 @@ regex
 accelerate
 protobuf
 
-torch==2.0.1
-
+# Force CPU-only torch
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
